Made things prittier, fixed a whitespace bug

--- a/css/css.css
+++ b/css/css.css
@@ -17,5 +17,32 @@ body{
 	margin-left:auto;
 	margin-right:auto;
 	width:30%;
-	margin-top: 25%;
+	margin-top: 9%;
+	border:5px solid gray;
+}
+#sha{
+	text-align:center;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	background-image:url("noise.png");
+	background-color:red;
+	margin-top:5%;
+	margin-left:auto;
+	margin-right:auto;
+	width:40%;
+	height:100px;
+	border:5px solid gray;
+}
+
+#return{
+	margin-top:5%;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	background-color:#5CE62E;
+	background-image:url("noise.png");
+	margin-left:auto;
+	margin-right:auto;
+	width:30%;
 }
